hphp/hack/test/typecheck/tconst/invalid_access_root.php.exp
File "invalid_access_root.php", line 5, characters 9-9:
T must be an identifier for a class (Naming[2061])
